# versol

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml
src/versol/: _solution.py  incompatibility.py  interfaces.py  iset.py  iset_test.py  report.py  solve.py  solve_test.py  term.py  util.py
